# reef

./: .editorconfig  .env  .gitignore  Caddyfile  Cargo.toml  Makefile  README.md  _typos.toml  docker-compose.yml  flake.nix
.github/workflows/: go.yml
bruno_collections/: README.md
bruno_collections/Reef/: Register Session.bru  bruno.json
bruno_collections/Reef/Datasets/: Delete Dataset.bru  List Datasets.bru  Load Dataset.bru  Upload Dataset.bru
bruno_collections/Reef/Jobs/: Abort Job [not found].bru  Abort Job.bru  C_AUTOGEN_SUBMIT.bru  Get Job.bru  Get Result.bru  List Jobs.bru  List Templates.bru  Submit Job.bru  [C] Submit Job.bru  [Rust] Panic.bru  [Rust] Submit Job.bru
bruno_collections/Reef/Logs/: Get Logs.bru
bruno_collections/Reef/Nodes/: Get Nodes.bru
bruno_collections/Reef/environments/: !!! Reef [PROD].bru  Reef [Dev].bru
bruno_collections/job_dev/c/: .gitignore  Makefile  input.c  replace.sh  req_templ0  req_templ1
reef_compiler/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod
reef_compiler/lang_templates/c/: Makefile  defs.h  imports.h  input.c  log.c  log.h  memory.c  memory.h  reef.c  reef.h  walloc.c  walloc.h
reef_compiler/lang_templates/rust/: Cargo.toml  Makefile
reef_compiler/lang_templates/rust/src/: input.rs  lib.rs
reef_compiler/schema/: compiler.capnp
reef_compiler/skeletons/c/: Makefile  attributes.h  dataset.h  defs.h  fmt.c  fmt.h  input.c  lib.c  lib.h  log.c  log.h  reef.c  reef.h  walloc.c  walloc.h
reef_compiler/skeletons/rust/: Cargo.toml  Makefile
reef_compiler/skeletons/rust/src/: input.rs  lib.rs
reef_compiler/src/: main.rs  server.rs
reef_frontend/: .eslintrc.cjs  .prettierrc  Makefile  README.md  dataset.ts  job.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
reef_frontend/public/: .gitignore
reef_frontend/src/: App.tsx  main.tsx
reef_frontend/src/app/: globals.css  layout.tsx  page.tsx
reef_frontend/src/app/code/: code.css  editor.tsx  page.tsx
reef_frontend/src/app/jobs/: page.tsx
reef_frontend/src/app/node/: page.tsx
reef_frontend/src/components/: c-logo.tsx  docs-page.tsx  job-list-item.tsx  job-output.tsx  job-progress.tsx  job-status.tsx  rust-logo.tsx  worker-list-item.tsx
reef_frontend/src/lib/: .gitignore  dataProvider.ts  mockJobs.ts  mockdata.ts  utils.ts  websocket.ts  wsData.ts
reef_frontend/src/routes/: +page.svelte
reef_frontend/src/stores/: app.store.ts  datasets.store.ts  job.store.ts  log.store.ts  nodes.store.ts  session.store.ts  templates.store.ts
reef_frontend/src/types/: dataset.ts  job.ts  log.ts  node.ts  template.ts
reef_interpreter/: Cargo.toml  LICENSE-tinywasm  README.md
reef_interpreter/src/: error.rs  exec.rs  func.rs  imports.rs  instance.rs  leb128.rs  lib.rs  main.rs  module.rs  reference.rs
reef_interpreter/src/execution/: mod.rs
reef_interpreter/src/module/: instruction.rs  leb128.rs  mod.rs
reef_interpreter/src/module/sections/: code_section.rs  export_section.rs  function_section.rs  mod.rs  type_section.rs
reef_interpreter/src/parser/: conversion.rs  error.rs  mod.rs  module.rs  visit.rs
reef_interpreter/src/runtime/: mod.rs  value.rs
reef_interpreter/src/runtime/interpreter/: macros.rs  mod.rs  traits.rs
reef_interpreter/src/runtime/stack/: block_stack.rs  call_stack.rs  mod.rs  value_stack.rs
reef_interpreter/src/sections/: code_section.rs  export_section.rs  function_section.rs  mod.rs  type_section.rs
reef_interpreter/src/store/: data.rs  element.rs  global.rs  memory.rs  mod.rs  table.rs
reef_interpreter/src/types/: instructions.rs  mod.rs  value.rs
reef_interpreter/tests/wat/: block.wat  function_end.wat  function_nop.wat
reef_manager/: .env  .gitignore  .golangci.yml  Caddyfile  Makefile  c_test.wasm  dev_database_compose.yml  docker-compose-dev.yml  go.mod  go.sum  log.go  main.go
reef_manager/api/: api.go  auth.go  dataset.go  job.go  log.go  node.go  nodeAux.go  nodeComm.go  nodeHandshake.go  nodeMainLoop.go  nodeResult.go  nodeSync.go  ws.go
reef_manager/database/: database.go  database_test.go  dataset.go  job.go  job_test.go  log.go
reef_manager/database/migrations/: 000003_create_log_table.up.sql  000004_create_result_table.up.sql  000006_add_job_dataset.down.sql  000007_add_job_owners.up.sql
reef_manager/db/migrations/: 000001_create_job_table.up.sql  000002_create_ds_table.down.sql  000002_create_ds_table.up.sql  000004_create_result_table.down.sql  000004_create_result_table.up.sql  000005_add_job_wasm_id.down.sql  000005_add_job_wasm_id.up.sql  000006_add_job_dataset.up.sql  000007_add_job_owners.down.sql  000007_optional_job_datasets.down.sql  000007_optional_job_datasets.up.sql
reef_manager/example_job_templates/: foo.txt  hello_world.c  hello_world.c.json  hello_world.rs  hello_world.rs.json
reef_manager/logic/: apiJob.go  compiler.go  dataset.go  job.go  jobAbort.go  jobDaemon.go  jobQueue.go  jobQueue_test.go  jobResult.go  job_test.go  lockedMap.go  log.go  logic.go  node.go  nodeComm.go  nodeStartJob.go  uiNotifier.go  util.go  websocket.go
reef_node_native/: Cargo.toml  README.md  stress.sh
reef_node_native/src/: comms.rs  handshake.rs  main.rs  main.rs.old  worker.rs
reef_node_web/: Cargo.toml
reef_node_web/src/: lib.rs  message.rs
reef_protocol/: .gitignore  Makefile  README.md
reef_protocol/compiler/: Makefile
reef_protocol/compiler/go/: compiler.capnp.go  go.mod
reef_protocol/compiler/rust/: Cargo.toml  build.rs
reef_protocol/compiler/schema/: compiler.capnp  go.capnp
reef_protocol/go/: go.mod
reef_protocol/node/: Makefile
reef_protocol/node/go/: go.mod  go.sum  message.capnp.go
reef_protocol/node/rust/: Cargo.toml  build.rs
reef_protocol/node/schema/: message.capnp
reef_protocol/reef_wasm_interface/: Cargo.toml
reef_protocol/reef_wasm_interface/src/: lib.rs
reef_protocol/rust/: Cargo.toml
reef_protocol/rust/src/: lib.rs
reef_runtime_libs/wasm_test/: Cargo.toml  Makefile  c.wasm
reef_runtime_libs/wasm_test/c/: Makefile  main.c
reef_runtime_libs/wasm_test/src/: main.rs
(+18 files in other folders)
