[workspace]
members = [
    "reef_compiler",
    "reef_interpreter",
    "reef_node_native",
    "reef_protocol/compiler/rust",
    "reef_protocol/node/rust",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = []
description = "Fault-tolerant distributed Wasm runtime"
repository = "https://github.com/reef-runtime/reef"
edition = "2021"

[workspace.dependencies]
