[workspace]
# keep in sync with flake.nix
members = [
    "reef_compiler",
    # "reef_compiler/skeletons/rust",
    "reef_interpreter",
    "reef_node_native",
    "reef_protocol/compiler/rust",
    "reef_protocol/node/rust",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = []
description = "Fault-tolerant distributed Wasm runtime"
repository = "https://github.com/reef-runtime/reef"
edition = "2021"

[workspace.dependencies]
reef_interpreter = { path = "./reef_interpreter" }
reef_protocol_node = { path = "./reef_protocol/node/rust/" }
reef_protocol_compiler = { path = "./reef_protocol/compiler/rust/" }

capnp = "0.19.6"
capnp-rpc = "0.19.2"
capnpc = "0.19.0"

anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5.6", features = ["derive"] }
copy_dir = "0.1.3"
env_logger = "0.11.3"
flate2 = "1.0.30"
futures = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
sysinfo = "0.30.12"
tungstenite = "0.21.0"
tokio = { version = "1.37.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
url = "2.5.0"
