[package]
name = "reef_compiler"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
capnp = "0.19.6"
capnp-rpc = "0.19.1"
copy_dir = "0.1.3"
tokio = { version = "1.37.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.11", features = ["compat"] }

[build-dependencies]
capnpc = "0.19"
