[package]
name = "reef_compiler"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
reef_protocol_compiler.workspace = true

capnp.workspace = true
capnp-rpc.workspace = true

anyhow.workspace = true
clap.workspace = true
copy_dir.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
