[package]
name = "reef_interpreter"
version.workspace = true
description = "A tiny WebAssembly interpreter"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rkyv.workspace = true
wasmparser = { version = "0.208", default-features = false, features = [
    "validate",
] }
libm = { version = "0.2", default-features = false }
bytecheck = { version = "0.7" }

[features]
default = ["std"]
std = ["wasmparser/std"]
