[package]
name = "reef_interpreter"
version.workspace = true
description = "A tiny WebAssembly interpreter"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libm = { version = "0.2", default-features = false }
wasmparser = { version = "0.208", default-features = false, features = [
    "validate",
    "std",
] }

bincode.workspace = true
flate2.workspace = true
serde.workspace = true
