[package]
name = "reef_node_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
tungstenite = "0.21.0"
url = "2.5.0"
reef_protocol = { path = "../reef_protocol/rust/"}
capnp = "0.19.5"
sysinfo = "0.30.12"
hex = "0.4.3"
