[package]
name = "reef_node_native"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reef_node_native"
path = "src/main.rs"

[dependencies]
reef_interpreter.workspace = true
reef_protocol_node.workspace = true

capnp.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
hex.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
tungstenite.workspace = true
url.workspace = true
