[package]
name = "reef_node_web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
reef_interpreter.workspace = true
reef_protocol_node.workspace = true
reef_wasm_interface.workspace = true

capnp.workspace = true

hex.workspace = true
wasm-bindgen.workspace = true
